# CasperFlow

./: .gitignore  COMMENCER_ICI.md  CasperFlow_Demo1.srt  DEMO1_CAPTIONS.md  DEMO1_SCRIPT.md  DEMO2_AGENTS.md  DEMO3_MARKETPLACE.md  DEMO_SCENARIOS.md  DEMO_SCRIPT_VIDEO1.md  DORAHACKS_DESCRIPTION.md  LICENSE  README.md  SMART_CONTRACTS.md  index.html  package-lock.json  package.json  vite.config.ts
contracts/escrow/: Cargo.toml  README.md
contracts/escrow/src/: lib.rs
docs/screenshots/: README.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: attest.ts  casper.ts  index.ts
src/: App.tsx  AutoTextarea.tsx  ConsolePanel.tsx  ContextMenu.tsx  GroupNode.tsx  HelpHints.tsx  Icon.tsx  JournalView.tsx  Logo.tsx  ModuleNode.tsx  NodeConfig.tsx  NoteNode.tsx  ParamsPanel.tsx  PulseEdge.tsx  RecipientBalance.tsx  RecipientField.tsx  SettingsPanel.tsx  Sparks.tsx  TemplateGallery.tsx  VariableInput.tsx  WalletNodeBack.tsx  WalletNodeFront.tsx  WikiPanel.tsx  WorkspaceBar.tsx  agentTools.ts  ai.ts  aiUsage.ts  aiVars.ts  attest.ts  casper.ts  chips.tsx  journal.ts  lightning.ts  linkify.tsx  main.tsx  modules.ts  notify.ts  price.ts  runtime.ts  styles.css  (+10 more)
x402-server/: README.md  server.mjs
