[package]
name = "casperflow-escrow"
version = "0.1.0"
edition = "2021"
authors = ["CasperFlow"]
description = "Conditional escrow for x402 agent payments on Casper — funds released only on verified delivery, auto-refunded otherwise."

[dependencies]
odra = { version = "1.4.0", default-features = false }

[dev-dependencies]
odra-test = "1.4.0"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "casperflow_escrow_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casperflow_escrow_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true
